--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
       cursor: default;
     }
      button {
+      margin-top: 2-px;
       padding: 10px 15px; 
       font-size: 1rem; 
       border: none;
