--- a/index.html
+++ b/index.html
@@ -62,66 +62,83 @@
   <script>
     const puzzle = document.getElementById("puzzle"); 
     let tiles = [];
+    let emptyPos = {row:2, col:2};
+    let positions = [];
     function initPuzzle(){
-        puzzle.innerHTML = '';
-        let positions = [
-        "0px 0px", "-100px 0px", "-200px 0px",
-        "0px -100px", "-100px -100px", "-200px -100px",
-        "0px -200px", "-100px -200px"
-      ];
-    for (let i = 0; i < 8; i++) {
-        const tile = document.createElement("div");
-        tile.className = "tile";
-        tile.style.backgroundPosition = positions[i];
-        puzzle.appendChild(tile);
+        puzzle.innerHTML = "";
+      tiles = [];
+      positions = [];
+
+      let count = 0;
+      for (let row = 0; row < 3; row++) {
+        tiles[row] = [];
+        for (let col = 0; col < 3; col++) {
+          const tile = document.createElement("div");
+
+          if (row === 2 && col === 2) {
+            tile.className = "tile empty";
+            emptyPos = { row, col };
+          } else {
+            tile.className = "tile";
+            let pos = `-${col * 100}px -${row * 100}px`;
+            tile.style.backgroundPosition = pos;
+            positions.push(pos); 
+            tile.dataset.correct = pos; 
+            tile.addEventListener("click", () => moveTile(row, col));
+          }
+
+          puzzle.appendChild(tile);
+          tiles[row][col] = tile;
+        }
+      }
     }
-    const emptyTile = document.createElement("div");
-    emptyTile.className = "tile empty";
-    puzzel.appendChild(emptyTile);
-    tiles = Array.from(puzzle.children); 
+    function moveTile(row,col){
+        const rowDiff = Math.abs(row - emptyPos.row);
+        const colDiff = Math.abs(col - emptyPos.col);
+        if ((rowDiff + colDiff) === 1) {
+        const clickedTile = tiles[row][col];
+        const emptyTile = tiles[emptyPos.row][emptyPos.col];
+        emptyTile.style.backgroundPosition = clickedTile.style.backgroundPosition;
+        emptyTile.classList.remove("empty");
+        clickedTile.style.backgroundPosition = "";
+        clickedTile.classList.add("empty");
+        tiles[emptyPos.row][emptyPos.col] = emptyTile;
+        tiles[row][col] = clickedTile;
+
+        emptyPos = { row, col };
+        if (isSolved()) {
+          setTimeout(() => alert("🎉 You completed the image!"), 200);
+        }
+      }
+
     }
     function shuffle(){
-        for(let i = puzzle.children.length; i >=0; i--){
-            puzzle.appendChild(puzzle.children[Math.random() * i | 0]);
-        }
-        tiles = Array.from(puzzle.children);
+        for (let i = 0; i < 100; i++) {
+        const moves = [
+          { row: emptyPos.row - 1, col: emptyPos.col },
+          { row: emptyPos.row + 1, col: emptyPos.col },
+          { row: emptyPos.row, col: emptyPos.col - 1 },
+          { row: emptyPos.row, col: emptyPos.col + 1 }
+        ];
+
+        const validMoves = moves.filter(m => m.row >= 0 && m.row < 3 && m.col >= 0 && m.col < 3);
+        const randomMove = validMoves[Math.floor(Math.random() * validMoves.length)];
+        moveTile(randomMove.row, randomMove.col);
+      }
     }
     function isSolved(){
-        const positions = [
-        "0px 0px", "-100px 0px", "-200px 0px",
-        "0px -100px", "-100px -100px", "-200px -100px",
-        "0px -200px", "-100px -200px"
-      ];
-      for (let i = 0; i < 8; i++) {
-        if (tiles[i].style.backgroundPosition !== positions[i]) {
-          return false;
+         let index = 0;
+      for (let row = 0; row < 3; row++) {
+        for (let col = 0; col < 3; col++) {
+          if (row === 2 && col === 2) continue; // skip empty
+          if (tiles[row][col].style.backgroundPosition !== positions[index]) {
+            return false;
+          }
+          index++;
         }
       }
       return true;
     }
-    puzzle.addEventListener("click", (e) => {
-      const clickedTile = e.target; 
-
-      if (!clickedTile.classList.contains("tile") || clickedTile.classList.contains("empty")) {
-        return; 
-      }
-
-      const emptyTile = document.querySelector(".empty"); 
-
-      const clickedIndex = tiles.indexOf(clickedTile); 
-      const emptyIndex = tiles.indexOf(emptyTile); 
-
-      const validMoves = [emptyIndex - 1, emptyIndex + 1, emptyIndex - 3, emptyIndex + 3]; 
-
-      if (validMoves.includes(clickedIndex)) {
-        puzzle.insertBefore(clickedTile, emptyTile); 
-
-        tiles.splice(emptyIndex, 0, tiles.splice(clickedIndex, 1)[0]); 
-        if (isSolved()){
-            setTimeout(() => alert("🎉 You solved the puzzle!"), 200);
-        }
-      }
-    });
     initPuzzle();
   </script>
 </body>
