--- a/index.html
+++ b/index.html
@@ -35,12 +35,13 @@
     }
 
     .empty {
-      background: #ddd;
+      background: none;
       background-image: none;
+      border: 1px dashed #aaa;
       cursor: default;
     }
      button {
-      margin-top: 2-px;
+      margin-top: 20px;
       padding: 10px 15px; 
       font-size: 1rem; 
       border: none;
