--- a/index.html
+++ b/index.html
@@ -61,9 +61,16 @@
     button:hover {
       background: #5548c8; 
     }
+    .title{
+      margin-bottom: 20px;
+      font-size: 2rem;
+      font-weight:bold;
+      color: #333;
+      text-align: center;}
   </style>
 </head>
 <body>
+  <h1 class="title">Sliding Puzzle</h1>
   <div id="puzzle"></div>
   <div class="controls">
     <button onclick="shuffle()">Shuffle</button>
