--- a/index.html
+++ b/index.html
@@ -24,6 +24,12 @@
       padding: 5px;
       border-radius: 10px;
     }
+    #message {
+  margin-top: 15px;
+  font-size: 1.2rem;
+  font-weight: bold;
+  color: green;
+}
 
     .tile {
       width: 100px;
@@ -33,7 +39,10 @@
       border-radius: 8px;
       cursor: pointer;
     }
-
+    .tile:hover {
+  transform: scale(1.05);
+  transition: transform 0.2s ease;
+}
     .empty {
       background: none;
       background-image: none;
@@ -71,6 +80,7 @@
 </head>
 <body>
   <h1 class="title">Sliding Puzzle</h1>
+  <p id="message"></p>
   <div id="puzzle"></div>
   <div class="controls">
     <button onclick="shuffle()">Shuffle</button>
