--- a/index.html
+++ b/index.html
@@ -170,14 +170,16 @@
     }
 
     function isSolved() {
-      let index = 0;
+      
       for (let row = 0; row < 3; row++) {
         for (let col = 0; col < 3; col++) {
           if (row === 2 && col === 2) continue; 
-          if (tiles[row][col].style.backgroundPosition !== tiles[row][col].dataset.correct) {
+         let expected = `-${col * 100}px -${row * 100}px`;
+
+          if (tiles[row][col].style.backgroundPosition !== tiles[row][col].expected) {
         return false;
       }
-          index++;
+          
         }
       }
       return true;
