--- a/index.html
+++ b/index.html
@@ -4,85 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Sliding Puzzle</title>
-  <style>
-    body {
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-      background: linear-gradient(135deg, #f0f0f0, #dcdcdc);
-      font-family: Arial, sans-serif;
-    }
-
-    #puzzle {
-      display: grid;
-      grid-template-columns: repeat(3, 100px);
-      grid-template-rows: repeat(3, 100px);
-      gap: 5px;
-      background: #333;
-      padding: 5px;
-      border-radius: 10px;
-    }
-
-    #message {
-      margin-top: 15px;
-      font-size: 1.2rem;
-      font-weight: bold;
-      color: green;
-      text-align: center;
-    }
-
-    .tile {
-      width: 100px;
-      height: 100px;
-      background-image: url("puzzle.jpg"); 
-      background-size: 300px 300px;
-      border-radius: 8px;
-      cursor: pointer;
-    }
-
-    .tile:hover {
-      transform: scale(1.05);
-      transition: transform 0.2s ease;
-    }
-
-    .empty {
-      background: none;
-      background-image: none;
-      border: 1px dashed #aaa;
-      cursor: default;
-    }
-
-    .controls {
-      margin-top: 20px;
-      display: flex;
-      gap: 15px;
-      justify-content: center;
-    }
-
-    button {
-      padding: 10px 15px; 
-      font-size: 1rem; 
-      border: none;
-      border-radius: 5px; 
-      background: #6c63ff; 
-      color: white; 
-      cursor: pointer; 
-    }
-
-    button:hover {
-      background: #5548c8; 
-    }
-
-    .title {
-      margin-bottom: 20px;
-      font-size: 2rem;
-      font-weight: bold;
-      color: #333;
-      text-align: center;
-    }
-  </style>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <h1 class="title">Sliding Puzzle</h1>
@@ -92,100 +14,6 @@
     <button onclick="shuffle()">Shuffle</button>
     <button onclick="initPuzzle()">Restart</button>
   </div>
-
-  <script>
-    const puzzle = document.getElementById("puzzle"); 
-    let tiles = [];
-    let emptyPos = { row: 2, col: 2 };
-
-    function initPuzzle() {
-      puzzle.innerHTML = "";
-      tiles = [];
-      document.getElementById("message").textContent = "";
-
-      let id = 1; // tile IDs go 1–8
-      for (let row = 0; row < 3; row++) {
-        tiles[row] = [];
-        for (let col = 0; col < 3; col++) {
-          const tile = document.createElement("div");
-
-          if (row === 2 && col === 2) {
-            tile.className = "tile empty";
-            emptyPos = { row, col };
-          } else {
-            tile.className = "tile";
-            tile.dataset.id = id; // assign ID
-            let pos = `-${col * 100}px -${row * 100}px`;
-            tile.style.backgroundPosition = pos;
-            id++;
-          }
-
-          tile.addEventListener("click", () => moveTile(row, col));
-
-          puzzle.appendChild(tile);
-          tiles[row][col] = tile;
-        }
-      }
-    }
-
-    function moveTile(row, col) {
-      const rowDiff = Math.abs(row - emptyPos.row);
-      const colDiff = Math.abs(col - emptyPos.col);
-
-      if ((rowDiff + colDiff) === 1) {
-        const clickedTile = tiles[row][col];
-        const emptyTile = tiles[emptyPos.row][emptyPos.col];
-
-        // swap background
-        emptyTile.style.backgroundPosition = clickedTile.style.backgroundPosition;
-        emptyTile.dataset.id = clickedTile.dataset.id; // swap ID
-        emptyTile.classList.remove("empty");
-
-        clickedTile.style.backgroundPosition = "";
-        delete clickedTile.dataset.id;
-        clickedTile.classList.add("empty");
-
-        tiles[emptyPos.row][emptyPos.col] = emptyTile;
-        tiles[row][col] = clickedTile;
-
-        emptyPos = { row, col };
-
-        if (isSolved()) {
-          document.getElementById("message").textContent = "🎉 You completed the image!";
-        }
-      }
-    }
-
-    function shuffle() {
-      for (let i = 0; i < 100; i++) {
-        const moves = [
-          { row: emptyPos.row - 1, col: emptyPos.col },
-          { row: emptyPos.row + 1, col: emptyPos.col },
-          { row: emptyPos.row, col: emptyPos.col - 1 },
-          { row: emptyPos.row, col: emptyPos.col + 1 }
-        ];
-        const validMoves = moves.filter(m => m.row >= 0 && m.row < 3 && m.col >= 0 && m.col < 3);
-        const randomMove = validMoves[Math.floor(Math.random() * validMoves.length)];
-        moveTile(randomMove.row, randomMove.col);
-      }
-      document.getElementById("message").textContent = "";
-    }
-
-    function isSolved() {
-      let id = 1;
-      for (let row = 0; row < 3; row++) {
-        for (let col = 0; col < 3; col++) {
-          if (row === 2 && col === 2) continue; // skip empty
-          if (tiles[row][col].dataset.id != id) {
-            return false;
-          }
-          id++;
-        }
-      }
-      return true;
-    }
-
-    initPuzzle();
-  </script>
+  <script src="script.js"></script>
 </body>
 </html>
