--- a/index.html
+++ b/index.html
@@ -1,19 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Sliding Puzzle</title>
-  <link rel="stylesheet" href="style.css">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Sliding Puzzle — Tailwind</title>
+  <script src="https://cdn.tailwindcss.com"></script>
+>
+  <script>
+    tailwind.config = { darkMode: 'class' }
+  </script>
 </head>
-<body>
-  <h1 class="title">Sliding Puzzle</h1>
-  <p id="message"></p>
-  <div id="puzzle"></div>
-  <div class="controls">
-    <button onclick="shuffle()">Shuffle</button>
-    <button onclick="initPuzzle()">Restart</button>
+<body class="min-h-screen bg-gray-100 dark:bg-gray-900 flex items-center justify-center font-sans">
+
+  <div class="w-full max-w-2xl px-4">
+    <header class="mb-6 flex items-center justify-between">
+      <div class="flex items-center gap-3">
+        <div class="h-10 w-10 rounded-lg bg-gradient-to-r from-indigo-500 to-purple-500 flex items-center justify-center text-white font-bold">IDEA</div>
+        <h1 class="text-xl font-semibold text-gray-800 dark:text-gray-100">Sliding Puzzle</h1>
+      </div>
+      <div class="text-sm text-gray-600 dark:text-gray-300">Tailwind version</div>
+    </header>
+
+    <main class="bg-white dark:bg-gray-800 rounded-2xl p-6 shadow">
+      <p id="message" class="text-center text-green-600 dark:text-green-400 mb-4"></p>
+
+      
+      <div id="puzzle" 
+           class="mx-auto grid grid-cols-3 gap-1 bg-gray-800 p-1 rounded-lg"
+           style="width: calc(3 * 100px + 2 * 1rem);">
+       
+      </div>
+
+  
+      <div class="mt-6 flex items-center justify-center gap-4">
+        <button id="shuffleBtn" class="px-4 py-2 bg-indigo-600 text-white rounded-lg hover:bg-indigo-500 transition">Shuffle</button>
+        <button id="restartBtn" class="px-4 py-2 bg-gray-200 dark:bg-gray-700 text-gray-800 dark:text-gray-100 rounded-lg hover:bg-gray-300 transition">Restart</button>
+      </div>
+
+      <p class="mt-4 text-xs text-gray-500 text-center">Made with Tailwind (CDN).</p>
+    </main>
   </div>
+<footer class="mt-10 text-center text-sm text-gray-600 dark:text-gray-400 border-t pt-4">
+  <p class="font-medium text-gray-700 dark:text-gray-300">Sliding Puzzle Project</p>
+  <p class="mt-1">Developed with Tailwind CSS | © 2025 Annika, IDEA NMAMIT</p>
+</footer>
+
+  
   <script src="script.js"></script>
 </body>
 </html>
