--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
   <div class="w-full max-w-2xl px-4 mx-auto flex flex-col flex-1">
 
-    <header class="mb-6 flex items-center justify-between">
+    <header class="mt-2 mb-6 flex items-center justify-between">
       <div class="flex items-center gap-3">
         <div class="h-10 w-10 rounded-lg bg-gradient-to-r from-indigo-500 to-purple-500 flex items-center justify-center text-white font-bold">IDEA</div>
         <h1 class="text-xl font-semibold text-gray-800 dark:text-gray-100">Sliding Puzzle</h1>
