--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <p class="mt-4 text-xs text-gray-500 text-center">Made with Tailwind (CDN).</p>
     </main>
 
-    <footer class="mt-auto mt-10 text-center text-sm text-gray-600 dark:text-gray-400 border-t pt-4">
+    <footer class="mb-3 mt-auto mt-10 text-center text-sm text-gray-600 dark:text-gray-400 border-t pt-4">
       <p class="font-medium text-gray-700 dark:text-gray-300">Sliding Puzzle Project</p>
       <p class="mt-1">Developed with Tailwind CSS | © 2025 Annika, IDEA NMAMIT</p>
     </footer>
