--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
         <h1 class="text-xl font-semibold text-gray-800 dark:text-gray-100">Sliding Puzzle</h1>
       </div>
       <div class="text-sm text-gray-600 dark:text-gray-300">Tailwind version</div>
+<button id="darkToggle" class="px-3 py-1 rounded-md bg-gray-200 dark:bg-gray-700 text-sm focus:outline-none focus-visible:ring-2 focus-visible:ring-indigo-300 hover:opacity-80 transition">
+  Toggle dark
+</button>
+
     </header>
 
     <main class="bg-white dark:bg-gray-800 rounded-2xl p-6 shadow flex-shrink-0">
