--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
       <div class="flex items-center gap-3">
         <h1 class="text-xl font-semibold text-gray-800 dark:text-gray-100">Sliding Puzzle</h1>
       </div>
-      <div class="text-sm text-gray-600 dark:text-gray-300">Tailwind version</div>
 <button id="darkToggle" class="px-3 py-1 rounded-md bg-gray-200 dark:bg-gray-700 dark:text-white text-sm focus:outline-none focus-visible:ring-2 focus-visible:ring-indigo-300 hover:opacity-80 transition">
   Toggle dark
 </button>
@@ -44,7 +43,7 @@
 
     <footer class="mb-3 mt-auto mt-10 text-center text-sm text-gray-600 dark:text-gray-400 border-t pt-4">
       <p class="font-medium text-gray-700 dark:text-gray-300">Sliding Puzzle Project</p>
-      <p class="mt-1">Developed with Tailwind CSS | © 2025 Annika, IDEA NMAMIT</p>
+      <p class="mt-1">Developed with Tailwind CSS, JS and HTML | © 2025 Annika, IDEA NMAMIT</p>
     </footer>
 
   </div>
